--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
-/* Add application styles & imports to this file! */
+/* You can add global styles to this file, and also import other style files */
+
+html,
+body {
+  font-family: sans-serif;
+}
